--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="size">Rozmiar %1$s</string>
     <string name="width">Szerokość %1$s</string>
     <string name="loading">Ładowanie…</string>
@@ -2041,4 +2043,14 @@
     <string name="downloading">Pobieranie</string>
     <string name="smooth_shapes">Gładkie kształty</string>
     <string name="smooth_shapes_sub">Użyj superelips zamiast standardowych zaokrąglonych prostokątów, aby uzyskać gładsze, bardziej naturalne kształty</string>
+    <string name="shape_type">Typ kształtu</string>
+    <string name="cut">Cięcie</string>
+    <string name="rounded">Bułczasty</string>
+    <string name="smooth">Gładki</string>
+    <string name="cut_shapes_sub">Ostre krawędzie bez zaokrągleń</string>
+    <string name="rounded_shapes_sub">Klasycznie zaokrąglone rogi</string>
+    <string name="shapes_type">Typ kształtów</string>
+    <string name="corners_size">Rozmiar narożników</string>
+    <string name="squircle">Wiercik</string>
+    <string name="squircle_shapes_sub">Eleganckie zaokrąglone elementy interfejsu użytkownika</string>
 </resources>
