--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2043,4 +2043,14 @@
     <string name="downloading">Загрузка</string>
     <string name="smooth_shapes">Гладкие формы</string>
     <string name="smooth_shapes_sub">Используйте суперэллипсы вместо стандартных закругленных прямоугольников для получения более плавных и естественных форм.</string>
+    <string name="shape_type">Тип формы</string>
+    <string name="cut">Резать</string>
+    <string name="rounded">Закругленный</string>
+    <string name="smooth">Гладкий</string>
+    <string name="cut_shapes_sub">Острые края без закруглений</string>
+    <string name="rounded_shapes_sub">Классические закругленные углы.</string>
+    <string name="shapes_type">Тип фигуры</string>
+    <string name="corners_size">Размер углов</string>
+    <string name="squircle">Сквиркл</string>
+    <string name="squircle_shapes_sub">Элегантные закругленные элементы пользовательского интерфейса</string>
 </resources>
