--- a/core/resources/src/main/res/values-sk/strings.xml
+++ b/core/resources/src/main/res/values-sk/strings.xml
@@ -2043,4 +2043,14 @@
     <string name="downloading">Sťahovanie</string>
     <string name="smooth_shapes">Hladké tvary</string>
     <string name="smooth_shapes_sub">Pre hladšie a prirodzenejšie tvary použite superelipsy namiesto štandardných zaoblených obdĺžnikov</string>
+    <string name="shape_type">Typ tvaru</string>
+    <string name="cut">Vystrihnúť</string>
+    <string name="rounded">Zaoblené</string>
+    <string name="smooth">Hladký</string>
+    <string name="cut_shapes_sub">Ostré hrany bez zaoblenia</string>
+    <string name="rounded_shapes_sub">Klasické zaoblené rohy</string>
+    <string name="shapes_type">Tvary Typ</string>
+    <string name="corners_size">Veľkosť rohov</string>
+    <string name="squircle">Squircle</string>
+    <string name="squircle_shapes_sub">Elegantné zaoblené prvky používateľského rozhrania</string>
 </resources>
