--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2041,4 +2041,14 @@
     <string name="downloading">பதிவிறக்குகிறது</string>
     <string name="smooth_shapes">மென்மையான வடிவங்கள்</string>
     <string name="smooth_shapes_sub">மென்மையான, இயற்கையான வடிவங்களுக்கு நிலையான வட்டமான செவ்வகங்களுக்குப் பதிலாக சூப்பர் எலிப்ஸைப் பயன்படுத்தவும்</string>
+    <string name="shape_type">வடிவ வகை</string>
+    <string name="cut">வெட்டு</string>
+    <string name="rounded">வட்டமானது</string>
+    <string name="smooth">மென்மையானது</string>
+    <string name="cut_shapes_sub">ரவுண்டிங் இல்லாமல் கூர்மையான விளிம்புகள்</string>
+    <string name="rounded_shapes_sub">கிளாசிக் வட்டமான மூலைகள்</string>
+    <string name="shapes_type">வடிவங்களின் வகை</string>
+    <string name="corners_size">மூலைகளின் அளவு</string>
+    <string name="squircle">அணில்</string>
+    <string name="squircle_shapes_sub">நேர்த்தியான வட்டமான UI கூறுகள்</string>
 </resources>
