--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="image_too_large_preview">Зображення завелике для попереднього перегляду, але спроба збереження все одно буде здійснена</string>
     <string name="pick_image">Виберіть зображення для початку</string>
     <string name="resize_type">Тип масштабування</string>
@@ -2041,4 +2043,14 @@
     <string name="downloading">Завантажується</string>
     <string name="smooth_shapes">Плавні фігури</string>
     <string name="smooth_shapes_sub">Використовуйте супереліпси замість стандартних заокруглених прямокутників для більш гладких і природних форм</string>
+    <string name="shape_type">Тип форми</string>
+    <string name="cut">Вирізати</string>
+    <string name="rounded">Округлі</string>
+    <string name="smooth">Гладкий</string>
+    <string name="cut_shapes_sub">Гострі краї без округлення</string>
+    <string name="rounded_shapes_sub">Класичні закруглені кути</string>
+    <string name="shapes_type">Тип форми</string>
+    <string name="corners_size">Розмір кутів</string>
+    <string name="squircle">Squircle</string>
+    <string name="squircle_shapes_sub">Елегантні округлі елементи інтерфейсу користувача</string>
 </resources>
