--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2030,23 +2030,23 @@
     <string name="warp_mode_swirl_cw">Вихрь (→)</string>
     <string name="warp_mode_swirl_ccw">Вихрь (←)</string>
     <string name="compute_percents">Вычисление процентов</string>
-    <string name="minimum_value_is">Минимальное значение: %1$s.</string>
+    <string name="minimum_value_is">Минимальное значение: %1$s</string>
     <string name="warp_sub">Искажайте изображение, рисуя пальцами</string>
     <string name="warp">Деформация</string>
     <string name="hardness">Твердость</string>
     <string name="warp_mode">Режим деформации</string>
     <string name="fade_strength">Сила исчезновения</string>
-    <string name="top_drop">Топ дропа</string>
-    <string name="bottom_drop">Нижняя капля</string>
-    <string name="start_drop">Начать падение</string>
-    <string name="end_drop">Конец падения</string>
+    <string name="top_drop">Верхняя обрезка</string>
+    <string name="bottom_drop">Нижняя обрезка</string>
+    <string name="start_drop">Левая обрезка</string>
+    <string name="end_drop">Правая обрезка</string>
     <string name="downloading">Загрузка</string>
     <string name="smooth_shapes">Гладкие формы</string>
     <string name="smooth_shapes_sub">Используйте суперэллипсы вместо стандартных закругленных прямоугольников для получения более плавных и естественных форм.</string>
     <string name="shape_type">Тип формы</string>
-    <string name="cut">Резать</string>
-    <string name="rounded">Закругленный</string>
-    <string name="smooth">Гладкий</string>
+    <string name="cut">Обрезанная</string>
+    <string name="rounded">Закругленная</string>
+    <string name="smooth">Гладкая</string>
     <string name="cut_shapes_sub">Острые края без закруглений</string>
     <string name="rounded_shapes_sub">Классические закругленные углы.</string>
     <string name="shapes_type">Тип фигуры</string>
